--- a/public/style.css
+++ b/public/style.css
@@ -889,8 +889,8 @@ hr {
   padding-right: 20rem;
   font-size: 1.3rem;
 }
-.logo {
-  width: 100%;
-  height: auto;
+.logoluckyy {
+  width: 8rem;          /* ขนาดวงกลม */
+  height: 8rem;         /* ขนาดวงกลมเท่ากับความกว้าง */
   max-width: 100%;
 }
