--- a/public/style.css
+++ b/public/style.css
@@ -958,3 +958,27 @@ hr {
 .nav_items:hover {
   text-decoration: underline;
 }
+
+/* แถบสีน้ำเงินอ่อน */
+.sub-blue-bar {
+  background-color: #1976d2; /* น้ำเงินอ่อน */
+  padding: 8px 20px;
+}
+
+/* เมนูภายในแถบอ่อน */
+.subMenu {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* ลิงก์ในแถบอ่อน */
+.sub_items {
+  color: white;
+  text-decoration: none;
+  margin-right: 25px;
+  font-size: 15px;
+  font-weight: 500;
+  white-space: nowrap;
+}
