--- a/public/style.css
+++ b/public/style.css
@@ -977,7 +977,7 @@ hr {
 .sub_items {
   color: white;
   text-decoration: none;
-  margin-right: 25px;
+  margin-left: 25px;
   font-size: 15px;
   font-weight: 500;
   white-space: nowrap;
