--- a/public/style.css
+++ b/public/style.css
@@ -103,12 +103,10 @@ a {
 }
 
 .main_image {
-  /* border: 2px solid gold; */
-  width: 55%;
-  height: auto;
-  transition: 0.3s;
-
-  border: none;
+  position: relative; /* ให้ภาพ absolute ได้ในนี้ */
+  width: 100%;
+  height: 100vh; /* เต็มความสูงจอ */
+  overflow: hidden;
 }
 
 .main_image:hover {
@@ -116,13 +114,13 @@ a {
 }
 
 .main_image #img1 {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: auto;
-  max-width: 100%;
+  height: 100%;
+  object-fit: cover; /* ขยายเต็มแต่ไม่บีบ */
   z-index: 0;
-
-  /* border: 2px solid rgb(3, 3, 3); */
-  padding: 1rem;
 }
 
 .social {
