--- a/public/style.css
+++ b/public/style.css
@@ -103,10 +103,12 @@ a {
 }
 
 .main_image {
-  position: relative; /* ให้ภาพ absolute ได้ในนี้ */
-  width: 100%;
-  height: 100vh; /* เต็มความสูงจอ */
-  overflow: hidden;
+  /* border: 2px solid gold; */
+  width: 55%;
+  height: auto;
+  transition: 0.3s;
+
+  border: none;
 }
 
 .main_image:hover {
@@ -114,13 +116,13 @@ a {
 }
 
 .main_image #img1 {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  object-fit: cover; /* ขยายเต็มแต่ไม่บีบ */
+  height: auto;
+  max-width: 100%;
   z-index: 0;
+
+  /* border: 2px solid rgb(3, 3, 3); */
+  padding: 1rem;
 }
 
 .social {
