--- a/public/style.css
+++ b/public/style.css
@@ -1039,3 +1039,16 @@ html, body {
   margin-right: 10px;
   font-size: 18px;
 }
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-wrapper {
+  flex: 1; /* ทำให้เนื้อหากินพื้นที่ที่เหลือ */
+  display: flex;
+  flex-direction: column;
+}
