--- a/public/style.css
+++ b/public/style.css
@@ -972,6 +972,7 @@ hr {
   list-style: none;
   margin: 0;
   padding: 0;
+  justify-content: flex-end; /* จัดตำแหน่งไปทางขวา */
 }
 
 /* ลิงก์ในแถบอ่อน */
